--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,14 @@ p {
     background-color: rgba(218, 165, 32, 0.575);
 }
 
+#table-data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.timer-element {
+    display: flex;
+    justify-content: space-evenly;
+    
+}
